[tool.poetry]
name = "kimyushin"
version = "0.1.0"
description = ""
authors = ["qodot <waitingforqodot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pykrx = "^1.0.44"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
